--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ h2, h1, h3{
     font-weight: 200;
 }
 
+html{
+    cursor: url("./assets/img/cursor.svg") 124 124, auto !important;
+}
+
 body{
     width: 100vw;
     margin: 0;
@@ -109,7 +113,13 @@ body{
     margin: 0;
 }
 
-.headband > h2 {
+.headband-bio{
+    background-color: grey;
+    color: white;
+    margin: 0;
+}
+
+h2 {
     font-family: "MyWebFont";
     font-size: 35px;
     text-align: center;
@@ -215,4 +225,44 @@ body{
 button > img {
     height: 20px;
     width: 20px;
+}
+
+/* BIOGRAPHY CSS */
+
+.container{
+    padding: 40px;
+    background-color: #5F13FF;
+    display: flex;
+    min-height: 100vh;
+}
+
+.idPicture{
+    width: 20%;
+}
+
+.idPicture > img{
+    width: 90%;
+    height: auto;
+}
+
+.text{
+    width: 80%;
+}
+
+.text > .row{
+    margin: 3vh 0;
+    display: flex;
+    flex-direction: row;
+}
+
+.text > .row > .date, .biography{
+    padding: 0 3vw;
+}
+
+.text > .row > .date, .biography > span{
+    color: white;
+    font-family: "MyWebFont";
+    font-size: 25px;
+    text-align: center;
+    margin: 0;
 }
