--- a/style.css
+++ b/style.css
@@ -24,6 +24,19 @@ body{
     overflow-x: hidden;
 }
 
+@keyframes slideInFromTopContainer {
+    70%{
+        transform: translateY(-100%);
+    }
+    100%{
+        transform: translateY(0);
+    }
+}
+
+.main_container{
+    animation: 4s ease-in-out slideInFromTopContainer;
+}
+
 @keyframes slideInFromTop {
     30%{
         transform: translateY(0);
